loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: Boolean(false) does not take parameters
while (estFaceMur) (false) {
                           ^